--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "add-to-calendar-button-react": "^2.8.1",
+    "axios": "^1.7.9",
     "canvas-confetti": "^1.9.3",
+    "dotenv": "^16.4.7",
     "posthog-js": "^1.203.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -28,7 +30,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.2",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.7"
   }
